# youtube-rust-cdn

./: Cargo.toml  http.http
server1/: Cargo.toml
server1/src/: main.rs
server2/: Cargo.toml
server2/src/: main.rs
server3/: Cargo.toml
server3/src/: main.rs
src/: main.rs
src/pkg/: cache.rs  cdn.rs  config.rs  error.rs  handler.rs  loadbalancer.rs  mod.rs  state.rs
