[package]
name = "rust-cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"
thiserror = "2"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
reqwest = "0.12.12"

# forwarding
awc = "3.5.1"
url = "2.5.4"
futures-util = "0.3.31"

[workspace]
members = ["server1", "server2", "server3"]
